--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^4.5.3",
     "core-js": "^2.6.5",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.10",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
